yml/kafkapod.yml
apiVersion: "v1"
kind: "Pod"
metadata:
  name: kafka-pod
  namespace: storagerent
  labels:
    name: kafka-pod
spec:
  containers:
    - name: kafka-pod
      image: mesosphere/kafka-client
      command:
        - sleep
        - "360000"
