yml/siege.yml
apiVersion: v1
kind: Pod
metadata:
  name: siege
  namespace: storagerent
spec:
  containers:
  - name: siege
    image: apexacme/siege-nginx
