yml/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-storage-network-rule
  namespace: storagerent
spec:
  hosts:
  - storage
  http:
  - route:
    - destination:
        host: storage
    timeout: 3s
